HelloUltraviolet/Fixtures/RejectedSource/Procedures/MethodLookupAmbiguousDefault/Expected.uv
//! Expected diagnostic metadata for the MethodLookupAmbiguousDefault rejected-source specimen.

expectedDiagnostic("E-MOD-1307", "rule.15.LookupMethod-Ambig")
